# aideator

./: .bandit  .cursorrules  .dockerignore  .e2e-coverage.json  .env.example  .envrc  .envrc.orig  .gitignore  .semgrep.yml  .vulture_whitelist.py  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  Comms.md  DEV-NOTES.md  DEVELOPMENT-SETUP.md  DOCUMENTATION.md  Dockerfile  Dockerfile.agent  ERROR_HANDLING_TEST_SUMMARY.md  FEATURE-FLAGS.md  LICENSE  MVP_REQUIREMENTS.md  PRD-Complete-User-Interface.md  PRD-Task-Monitoring-State-Management.md  PRD.md  PRD_BACKEND.md  PROGRESSIVE_STREAMING_SUMMARY.md  PR_CREATION_IMPLEMENTATION.md  PR_ENHANCEMENT_SUMMARY.md  QUICK-START-GUIDE.md  README.md  TASK-RUN-ARCHITECTURE.md  TESTING.md  TEST_SUMMARY.md  Tiltfile  Tiltfile.ci  VERIFICATION-CHECKLIST.md  admin_dashboard.html  admin_data_viewer.html  alembic.ini  (+51 more)
.github/workflows/: ci-optimized.yml  ci.yml
_docs/: architecture.md  presentation.md
_docs/code_snippets/: Grabbing diff info in Python.md  Python code to do something when Claude finishes.md
_docs/features/: GitHub Integration.md  User Auth.md
agent/: Dockerfile  __init__.py  config.py  main.py  main_wrapper.py  requirements.txt
agent/analyzers/: __init__.py  codebase.py  codebase_analyzer.py  repository.py
agent/config/: providers.py  settings.py
agent/core/: orchestrator.py
agent/providers/: __init__.py  base.py  claude_cli.py  claude_cli_provider.py  gemini_cli.py  litellm_cli.py  litellm_old.py  litellm_provider.py  subprocess_base.py
agent/scripts/: __init__.py  litellm_wrapper.py
agent/services/: __init__.py  database_service.py  logging_service.py  output_writer.py  redis.py  redis_service.py  repository_service.py
agent/utils/: errors.py  file_utils.py  files.py
alembic/: env.py
alembic/versions/: 001_current_schema.py  001_initial_schema.py  002_seed_data.py  003_add_api_key_usage_columns.py  004_sync_runs_table.py  005_sync_sessions_and_turns_tables.py  006_drop_sessions_name_column.py  007_add_provider_key_tables.py  008_update_model_definitions_schema.py  009_fix_model_variant_foreign_key.py  010_add_agent_outputs_table.py  010_add_github_oauth_fields.py  011_add_github_oauth_fields.py  011_add_model_sync_logs_table.py  012_add_model_sync_logs_table.py  012_add_task_id_system.py  013_add_session_turn_to_runs.py  014_add_litellm_analytics_table.py  0b228e9fec0b_initial_clean_schema.py  26108aff6510_add_updated_at_columns_to_runs_and_.py  8aa06f2b7e5a_add_github_oauth_fields_to_users.py  ac7531561cc7_add_task_id_sequence_for_autoincrement.py  c6deba72bbcc_remove_api_keys_table.py  e8c9dfd9ef35_migration_gate_unified_tasks_migration_.py
alembic/versions_backup/: 004_sync_runs_table.py  005_sync_sessions_and_turns_tables.py  008_update_model_definitions_schema.py  009_fix_model_variant_foreign_key.py  010_add_agent_outputs_table.py  011_add_task_status_to_runs.py  012_add_task_id_system.py  ac7531561cc7_add_task_id_sequence_for_autoincrement.py
app/: main.py
app/core/: auth.py  config.py  database.py  dependencies.py  deps.py  encryption.py  logging.py
app/middleware/: development.py  logging.py  rate_limit.py
app/models/: __init__.py  model_definition.py  provider.py  provider_key.py  run.py  session.py  task.py  user.py
app/schemas/: auth.py  common.py  models.py  runs.py  session.py  tasks.py
app/services/: __init__.py  agent_orchestrator.py  agent_orchestrator_docker.py  agent_orchestrator_v2.py  auth_service.py  dagger_module_service.py  dagger_service.py  database_init.py  docker_service.py  encryption_service.py  github_pr_service.py  global_key_service.py  kubernetes_service.py  litellm_model_discovery.py  log_watcher_service.py  model_catalog.py  model_discovery_service.py  model_sync_service.py  provider_key_service.py  redis_service.py  sse_manager.py
app/tasks/: model_sync_task.py
app/utils/: dev_user.py  github.py  (+2 more)
dagger/: dagger.json
dagger_module/: main.py  pyproject.toml
deprecated/: CLAUDE.old.md  CLAUDE.template
docs/: EMBEDDED_POSTGRES_SETUP.md  ENHANCED_PR_FUNCTIONALITY.md  QUICK-START-GUIDE.md  REFACTOR-PRD.md  TASK-RUN-ARCHITECTURE.md  nix-guide.md  phase2-redis-primary.md  redis-implementation-notes.md  redis-streaming-architecture.md  task-refactor-phase2.md  task-refactor-summary.md  task-variation-completion-state-management.md
frontend/: CLAUDE.md  debug-test.css  debug.html  eslint.config.mjs  force-colors.css  jest.config.js  jest.setup.js  knip.json  manual-scrolling-test.html  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-basic.css  test-page.html  test-streaming.html  tsconfig.json
frontend-old/: E2E_TEST_EXECUTION_SUMMARY.md  force-colors.css  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  test-output.css  test-simple.html  test-streaming.html  test-tailwind.html  tsconfig.json
interface-codex/: DESIGN-SYSTEM.md  package-lock.json
k8s/: agent-job-configmap.yaml  api.yaml  database.yaml  fastapi-service.yaml  litellm.yaml  pvc.yaml
prompts/: DiffViewer-README.md  DiffViewer.tsx  runs-to-tasks-audit-prompt.md
scripts/: add_mock_task_data.py  add_mock_task_data_simple.py  add_test_data.py  add_test_data_simple.py  check_agent_outputs.py  check_everything.py  clear_agent_outputs.py  clear_task_outputs.py  create_admin_api_key.py  create_test_data_v2.py  docker_init.sh  drop_all_tables.py  drop_all_tables_force.py  drop_all_tables_simple.py  format.py  init_db.py  lint.py  manage-secrets.sh  migrate.py  run_all_checks.py  run_migrations.sh  seed_database.py  stamp_alembic.py  test_admin_api.py  test_api_endpoints.py  test_redis_streaming.py  test_unit.py  typecheck.py  validate_dev_environment.py
src/: agent.py  main.py  pyproject.toml
tests/: conftest.py  conftest_embedded_postgres.py  conftest_sqlite.py  run_integration_tests.py  test_error_handling.py  test_github_pr_service.py  test_pr_creation.py  test_run_creation_fix.py
tests.old/: test-agent-job.yaml  test-agent-outputs-write.yaml  test-database-only.yaml  test-real-main-agent.yaml
(+395 files in other folders)
